--- a/Main.css
+++ b/Main.css
@@ -1,10 +1,230 @@
+/*
+Created by Deadman22 30 October 2022
+
+This uberstyle is free to use and take snipits from!
+I specifically created this to be used in conjunction with my Getting Started: Uberstyles tutorial
+for Gamebanana, so have fun with it and create a profile you can call home.
+*/
+
 :root{
-        --DefaultTextColor: #e2e2e2;
-        --defaultCursor  : url('https://github.com/duck2469/gamebanana-uberstyleCSS/blob/f229341946ad5061d268bd496f5b1d0bf95ce10c/Cursors/defaultCursor.cur'),    default !important;
-        --helpCursor     : url('https://github.com/duck2469/gamebanana-uberstyleCSS/blob/f229341946ad5061d268bd496f5b1d0bf95ce10c/Cursors/helpCursor.cur'),       help !important;
-        --grabCursor     : url('https://github.com/duck2469/gamebanana-uberstyleCSS/blob/f229341946ad5061d268bd496f5b1d0bf95ce10c/Cursors/grabCursor.cur'),                        grab !important;
-        --grabbingCursor : url('https://github.com/duck2469/gamebanana-uberstyleCSS/blob/f229341946ad5061d268bd496f5b1d0bf95ce10c/Cursors/grabbingCursor.cur'),                        grabbing !important;
-        --moveCursor     : url('https://github.com/duck2469/gamebanana-uberstyleCSS/blob/f229341946ad5061d268bd496f5b1d0bf95ce10c/Cursors/moveCursor.cur') 12 12, move !important;
-        --pointerCursor  : url('https://github.com/duck2469/gamebanana-uberstyleCSS/blob/f229341946ad5061d268bd496f5b1d0bf95ce10c/Cursors/pointerCursor.cur'),    pointer !important;
-}
-/*Ring-A-Ding Rampage, stefanotinaglia99
+        --NotificationUnseenBG: #424242;
+        --NavPaneBackgroundColor: #1d1d1d;
+        --DefaultNanoFontSize: 0.5rem;
+         --DefaultMicroFontSize: 0.6rem;
+         --DefaultTinyFontSize: 0.7rem;
+         --DefaultMiniFontSize: 0.8rem;
+         --DefaultSmallFontSize: 0.9rem;
+         --DefaultMediumFontSize: 1rem;
+         --DefaultLargeFontSize: 1.25rem;
+         --DefaultXLargeFontSize: 1.5rem;
+         --DefaultXxLargeFontSize: 2rem;
+         --DefaultXxxLargeFontSize: 2.5rem;
+         --DefaultXxxxLargeFontSize: 3rem;
+         --DefaultXxxxxLargeFontSize: 4rem;
+         --DefaultTextFontFamily: "Open Sans", sans-serif;
+         --DefaultTechnicalFontFamily: "IBM Plex Mono", monospace;
+     
+         /*Obviously, change this if you want to change the color of your default text*/
+         --DefaultTextColor: #e2e2e2;
+     
+         --DefaultBlueColor: #6CB1E1;
+         --DefaultRedColor: #FF4E4E;
+         --DefaultRedDarkColor: #701E24;
+         --DefaultGreenColor: #6EE16C;
+         --DefaultGreenDarkColor: #344734;
+         --DefaultPurpleColor: #FF5E9D;
+         --DefaultGreyColor: #999999;
+         --DefaultOrangeColor: #FF7238;
+         --DefaultYellowColor: #FFE033;
+         --StateLabelBackground: #3c4044;
+         --LinkColor: #FFE033;
+         --LinkHoverColor: #FD70E1;
+         --PrimaryNavBottomBorder: 1px solid rgba(0,0,0,0.25);
+         --PrimaryNavBackgroundColor: #1c272e;
+         --PrimaryNavHeight: 60px;
+         --PrimaryNavFontSize: 1em;
+         --SecondaryNavBackgroundColor: #1c272e;
+         --SecondaryNavFullWidth: 400px;
+         --SecondaryNavSmallIconOuterWidth: 36px;
+         --SecondaryNavRegularIconOuterWidth: 52px;
+         --NavControlsHeight: 1.5em;
+         --NavUpdatesIndicatorColor: #6CB1E1;
+         --NavPaneTitleFontFamily: "Open Sans", sans-serif;
+         --NavPaneTitleFontSize: 1.5em;
+         --PageTitleFontSize: 3em;
+         --PageTitleFontSize800: 2.5em;
+         --PageTitleFontSize600: 2em;
+         --PageTitleFontSize400: 1.5em;
+         --PageTitleColor: white;
+         --PageDescriptionFontSize: 1rem;
+         --BreadcrumbFontSize: 0.8em;
+     }
+     
+         /*This controls profile's background replace the color with url(link) to link your image*/
+      body {
+         background: #1d1d1d;
+      }
+     
+       /*Adjust the color of the site logo*/
+       #SiteLogo img {
+        max-width: unset;
+        filter: hue-rotate(56deg) saturate(3);
+     }
+     
+     /*This controls the background behind the main content on your profile*/
+       #MainContent{
+        background: #1a1a1a;
+     }
+     
+     /*This controls the background behind modules*/
+     #ContentGrid{
+        background: #1a1a1a;
+     }
+     
+     /*This contoles the looks of your modules such as identity, messages, online status, etc.*/
+     .PageModule>.Content {
+        background: #1d1d1d;
+        border: 1px solid #1d1d;
+     }
+     
+      /*general control for the look of headers*/
+     b, h2, h3 {
+        background: #1d1d1d !important;
+        text-align: center !important;
+        border-bottom: 1px solid #1d1d !important;
+        border-top: 1px solid #1d1d !important;
+     }
+     
+     /*I have this here to get rid of the small bit of border that would appear under the h2 headers*/
+     .PageModule>h2:after{
+       visibility: hidden;
+     }
+     
+      /*Top Navigation properties*/
+      #PrimaryNav{
+         background: #1d1d1d;
+         border-bottom: 2px solid #1d1d;
+      }
+     
+      /*Side Navgiation properties*/
+      #SecondaryNav{
+         background: #1d1d1d;
+         border-right: 1px solid #1d1d;
+      }
+     
+      /*Changes subnav when you scroll down*/
+      #SubNavigator{
+        display: block;
+        border-bottom: none;
+        padding-bottom: 10px;
+        text-align: center;
+      }
+     
+     #SubNavigator.Fixed{
+     background: #1a1a1a;
+     }
+     
+      /*These are the control buttons on your profile such as overview and settings*/
+      #SubNavigator .DropdownMenuSubNavigator{
+         background: #1a1a1a;
+     }
+     
+     #SubNavigator .ActiveEntry{
+        font-weight: bold;
+        margin-bottom: -0.125em;
+        border-bottom-width: 0.125em;
+        border-bottom-style: solid;
+        border-bottom-color: #1d1d;
+        background: #1a1a1a;
+     }
+     
+      /*a controls the default color of links, a:hover controls the link cover when hovered over*/
+      a{
+        color: #1d1d;
+      }
+     
+      a:hover{
+        color:#ffffff;
+      }
+     
+       /*Controls the looks of your buttons such as add message*/
+       button{
+        background: #1d1d1d;
+        border: 1px solid #363636;
+     }
+     
+     /*controls the Load More button*/
+     .ExtendedContentButton{
+        background: #1d1d1d;
+        border: 1px solid #363636;
+     }
+     
+     /*Controls the close button on your add message module*/
+     .Modal .CloseModal{
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 0.9em;
+        margin: 2px;
+        z-index: 1;
+        font-size: 1.5em;
+        cursor: pointer;
+     }
+     
+      /*Text Box controls for when you add a message*/
+      .Editor .ViewModes .Wysiwyg .RichText{
+         background: #1d1d1d;
+         border-radius: 3 3 3 0;
+         border: 1px solid #363636;
+      }
+      .Editor .WysiwygPalettes{
+         background: #1d1d1d;
+         border-top: 1px solid #363636;
+      }
+     
+      /*The very bottom section of your page*/
+      #PageFooter{
+         background: #1d1d1d;
+      }
+     
+     
+      /*Visitors Module Tab appearance*/
+      input:checked+.Tab {
+        border: 3px solid #1d1d; /*Controls border thickness & color for Active tab*/
+        border-bottom: 0;
+        cursor: default;
+        font-weight: 700;
+        margin-bottom: -3px;
+        opacity: 1;
+     }
+     
+     #VisitorsModule .Tabs{
+        padding: 0.5em 0.75em;
+        font-size: var(--DefaultSmallFontSize);
+     }
+     
+     /*This is mostly used to hide the 2 double stacked borders below the tabs*/
+      .Tabs{
+        border: none;
+        border-bottom: 0;
+        border-radius: 0.25em 0.25em 0 0;
+        cursor: pointer;
+        opacity: .5;
+        padding: 0.75em 1em;
+        transition: opacity .2s ease-in-out;
+      }
+      
+      .TabsWrapper {
+        border-bottom: hidden;
+     }
+     
+      .Tab{
+        background: transparent; /*Controls background color for all tabs*/
+        border: 1px solid #1d1d; /*Controls border for inactive tab*/
+        border-bottom: 0;
+        border-radius: 0.25em 0.25em 0 0;
+        cursor: pointer;
+        opacity: .5;
+        padding: 0.75em 1em;
+        transition: opacity .2s ease-in-out;
+      }
